[package]
name = "passcod-noodle"
version = "0.1.0"

authors = ["Félix Saparelli <felix@passcod.name>"]
license = "Apache 2.0 OR MIT"
description = "Tiny daemon to implement floating IPs with RFC5944 ARP announcements"
keywords = ["arp", "ndp", "floating-ip", "failover", "gratuitous", "announcement"]

documentation = "https://github.com/passcod/noodle#readme"
homepage = "https://github.com/passcod/noodle"
repository = "https://github.com/passcod/noodle"

edition = "2018"
default-run = "noodle"

[[bin]]
name = "noodle"
path = "src/main.rs"

[dependencies]
argh = "0.1.4"
async-std = { version = "1.9.0", features = ["attributes"] }
color-eyre = { version = "0.5.10", default-features = false }
pnet = "0.27.2"
futures = "0.3.13"
ctrlc = "3.1.8"
rand = "0.8.3"
log = "0.4.14"
femme = "2.1.1"
kv-log-macro = "1.0.7"

# no publishing on crates.io until this is released
[dependencies.rtnetlink]
version = "0.7.0"
git = "https://github.com/little-dude/netlink"
default-features = false
features = ["smol_socket"]

[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }.tar.xz"
bin-dir = "{ name }-v{ version }-{ target }/{ bin }{ format }"
pkg-fmt = "txz"

