[package]
name = "passcod-noodle"
version = "1.1.1"

authors = ["Félix Saparelli <felix@passcod.name>"]
license = "Apache 2.0 OR MIT"
description = "Tiny daemon to implement floating IPs with RFC5944 ARP announcements"
keywords = ["arp", "ndp", "floating-ip", "failover", "gratuitous", "announcement"]

documentation = "https://github.com/passcod/noodle#readme"
homepage = "https://github.com/passcod/noodle"
repository = "https://github.com/passcod/noodle"

edition = "2018"
default-run = "noodle"

[[bin]]
name = "noodle"
path = "src/main.rs"

[dependencies]
argh = "0.1.4"
async-std = { version = "1.9.0", features = ["attributes"] }
chrono = "0.4.19"
color-eyre = { version = "0.5.10", default-features = false }
ctrlc = "3.1.8"
env_logger = "0.8.3"
futures = "0.3.13"
kv-log-macro = "1.0.7"
log = { version = "0.4.14", features = ["kv_unstable_serde"] }
pnet = "0.27.2"
rand = "0.8.3"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
pulse = "0.5.3"

# waits on: https://github.com/little-dude/netlink/issues/149
[dependencies.rtnetlink]
version = "0.7.0"
git = "https://github.com/little-dude/netlink"
default-features = false
features = ["smol_socket"]

[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }.tar.xz"
bin-dir = "{ name }-v{ version }-{ target }/{ bin }{ format }"
pkg-fmt = "txz"

# waits on next libc after 0.2.90, for https://github.com/rust-lang/libc/pull/2119
[patch.crates-io.libc]
git = "https://github.com/rust-lang/libc"

